@@ -4,6 +4,8 @@ git-annex (5.20151102.2) UNRELEASED; urgency=medium
     This allows nicely displayed messages when using the -J flag.
   * Additional commands now suppport the -J flag: 
     fsck, drop, add, addurl, import
+  * import: Avoid very ugly error messages when the directory files
+    are imported to is not a directort, but perhaps an annexed file.
 
  -- Joey Hess <id@joeyh.name>  Wed, 04 Nov 2015 12:50:20 -0400
 
